Updated optimization model files

--- a/Optimization/optimization_monthly.ipynb
+++ b/Optimization/optimization_monthly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,18 +127,18 @@
     "model.nem = Param(default=0.000140) # per Watt\n",
     "\n",
     "# Consumption(dates, hours)\n",
-    "model.cons = Param(model.d, model.h, within=NonNegativeReals, default=0.0)\n",
-    "# Minimum daily consumption\n",
-    "model.min_cons = Param(model.d, within=NonNegativeReals, default=0.0)\n",
-    "# Maximum daily consumption\n",
-    "model.max_cons = Param(model.d, within=NonNegativeReals, default=infinity)\n",
+    "model.cons = Param(model.m, within=NonNegativeReals, default=0.0)\n",
+    "# Minimum consumption\n",
+    "model.min_cons = Param(model.m, within=NonNegativeReals, default=0.0)\n",
+    "# Maximum consumption\n",
+    "model.max_cons = Param(model.m, within=NonNegativeReals, default=infinity)\n",
     "\n",
     "# Irradiance(dates, hours): used to calculate generation\n",
-    "model.spi = Param(model.d, model.h, within=NonNegativeReals, default=0.0)\n",
-    "# Minimum daily spi\n",
-    "model.min_spi = Param(model.d, within=NonNegativeReals, default=0.0)\n",
-    "# Maximum daily spi\n",
-    "model.max_gen = Param(model.d, within=NonNegativeReals, default=1.0)\n",
+    "model.spi = Param(model.m, within=NonNegativeReals, default=0.0)\n",
+    "# Minimum spi\n",
+    "model.min_spi = Param(model.m, within=NonNegativeReals, default=0.0)\n",
+    "# Maximum spi\n",
+    "model.max_gen = Param(model.m, within=NonNegativeReals, default=1.0)\n",
     "\n",
     "# # Minimum system capacity\n",
     "# model.min_syscap = Param(model.m, within=NonNegativeReals, default=1000.0)\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -251,71 +251,7 @@
       "8           2327.495975  \n",
       "9           2676.620372  \n",
       "10          2560.245573  \n",
-      "11          2443.870774  \n",
-      "Daily Consumption:      num_hours  num_hours_pct                 date  daily_consumption\n",
-      "0          8.0       0.003831  2018-01-01 00:00:00         116.374799\n",
-      "1          8.0       0.003831  2018-01-02 00:00:00         116.374799\n",
-      "2          8.0       0.003831  2018-01-03 00:00:00         116.374799\n",
-      "3          8.0       0.003831  2018-01-04 00:00:00         116.374799\n",
-      "4          8.0       0.003831  2018-01-05 00:00:00         116.374799\n",
-      "5          0.0       0.000000  2018-01-06 00:00:00           0.000000\n",
-      "6          0.0       0.000000  2018-01-07 00:00:00           0.000000\n",
-      "7          8.0       0.003831  2018-01-08 00:00:00         116.374799\n",
-      "8          8.0       0.003831  2018-01-09 00:00:00         116.374799\n",
-      "9          8.0       0.003831  2018-01-10 00:00:00         116.374799\n",
-      "10         8.0       0.003831  2018-01-11 00:00:00         116.374799\n",
-      "11         8.0       0.003831  2018-01-12 00:00:00         116.374799\n",
-      "12         0.0       0.000000  2018-01-13 00:00:00           0.000000\n",
-      "13         0.0       0.000000  2018-01-14 00:00:00           0.000000\n",
-      "14         8.0       0.003831  2018-01-15 00:00:00         116.374799\n",
-      "15         8.0       0.003831  2018-01-16 00:00:00         116.374799\n",
-      "16         8.0       0.003831  2018-01-17 00:00:00         116.374799\n",
-      "17         8.0       0.003831  2018-01-18 00:00:00         116.374799\n",
-      "18         8.0       0.003831  2018-01-19 00:00:00         116.374799\n",
-      "19         0.0       0.000000  2018-01-20 00:00:00           0.000000\n",
-      "20         0.0       0.000000  2018-01-21 00:00:00           0.000000\n",
-      "21         8.0       0.003831  2018-01-22 00:00:00         116.374799\n",
-      "22         8.0       0.003831  2018-01-23 00:00:00         116.374799\n",
-      "23         8.0       0.003831  2018-01-24 00:00:00         116.374799\n",
-      "24         8.0       0.003831  2018-01-25 00:00:00         116.374799\n",
-      "25         8.0       0.003831  2018-01-26 00:00:00         116.374799\n",
-      "26         0.0       0.000000  2018-01-27 00:00:00           0.000000\n",
-      "27         0.0       0.000000  2018-01-28 00:00:00           0.000000\n",
-      "28         8.0       0.003831  2018-01-29 00:00:00         116.374799\n",
-      "29         8.0       0.003831  2018-01-30 00:00:00         116.374799\n",
-      "..         ...            ...                  ...                ...\n",
-      "335        0.0       0.000000  2018-12-02 00:00:00           0.000000\n",
-      "336        8.0       0.003831  2018-12-03 00:00:00         116.374799\n",
-      "337        8.0       0.003831  2018-12-04 00:00:00         116.374799\n",
-      "338        8.0       0.003831  2018-12-05 00:00:00         116.374799\n",
-      "339        8.0       0.003831  2018-12-06 00:00:00         116.374799\n",
-      "340        8.0       0.003831  2018-12-07 00:00:00         116.374799\n",
-      "341        0.0       0.000000  2018-12-08 00:00:00           0.000000\n",
-      "342        0.0       0.000000  2018-12-09 00:00:00           0.000000\n",
-      "343        8.0       0.003831  2018-12-10 00:00:00         116.374799\n",
-      "344        8.0       0.003831  2018-12-11 00:00:00         116.374799\n",
-      "345        8.0       0.003831  2018-12-12 00:00:00         116.374799\n",
-      "346        8.0       0.003831  2018-12-13 00:00:00         116.374799\n",
-      "347        8.0       0.003831  2018-12-14 00:00:00         116.374799\n",
-      "348        0.0       0.000000  2018-12-15 00:00:00           0.000000\n",
-      "349        0.0       0.000000  2018-12-16 00:00:00           0.000000\n",
-      "350        8.0       0.003831  2018-12-17 00:00:00         116.374799\n",
-      "351        8.0       0.003831  2018-12-18 00:00:00         116.374799\n",
-      "352        8.0       0.003831  2018-12-19 00:00:00         116.374799\n",
-      "353        8.0       0.003831  2018-12-20 00:00:00         116.374799\n",
-      "354        8.0       0.003831  2018-12-21 00:00:00         116.374799\n",
-      "355        0.0       0.000000  2018-12-22 00:00:00           0.000000\n",
-      "356        0.0       0.000000  2018-12-23 00:00:00           0.000000\n",
-      "357        8.0       0.003831  2018-12-24 00:00:00         116.374799\n",
-      "358        8.0       0.003831  2018-12-25 00:00:00         116.374799\n",
-      "359        8.0       0.003831  2018-12-26 00:00:00         116.374799\n",
-      "360        8.0       0.003831  2018-12-27 00:00:00         116.374799\n",
-      "361        8.0       0.003831  2018-12-28 00:00:00         116.374799\n",
-      "362        0.0       0.000000  2018-12-29 00:00:00           0.000000\n",
-      "363        0.0       0.000000  2018-12-30 00:00:00           0.000000\n",
-      "364        8.0       0.003831  2018-12-31 00:00:00         116.374799\n",
-      "\n",
-      "[365 rows x 4 columns]\n"
+      "11          2443.870774  \n"
      ]
     }
    ],
@@ -329,12 +265,12 @@
     "ols_usable = pd.read_csv(file_path)\n",
     "monthly_cons, daily_cons = get_monthly_daily_consumption(ols_usable, business_type, num_workers, sqft, year=target_year)\n",
     "print \"Monthly Consumption:\", monthly_cons\n",
-    "print \"Daily Consumption:\", daily_cons"
+    "#print \"Daily Consumption:\", daily_cons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,26 +289,29 @@
     "              0.80, 0.85, 0.92, 0.87, 0.80, 0.70, 0.60, 0.40, 0.20, 0, 0, 0]\n",
     "curr_year = datetime.datetime.now().year\n",
     "\n",
-    "# Generate .tab file for model.m\n",
-    "f = open(\"tab/m.tab\",\"w+\")\n",
-    "f.write(\"m\")\n",
-    "for i in range(num_months):\n",
-    "    f.write(\"\\n%d\" % (i+1))\n",
-    "f.close()\n",
+    "def gen_m_tab(num_months):\n",
+    "    # Generate .tab file for model.m\n",
+    "    f = open(\"tab/m.tab\",\"w+\")\n",
+    "    f.write(\"m\")\n",
+    "    for i in range(num_months):\n",
+    "        f.write(\"\\n%d\" % (i+1))\n",
+    "    f.close()\n",
     "\n",
-    "# Generate .tab file for model.h\n",
-    "f = open(\"tab/h.tab\",\"w+\")\n",
-    "f.write(\"h\")\n",
-    "for i in range(num_hours):\n",
-    "    f.write(\"\\n%d\" % i)\n",
-    "f.close()\n",
+    "def gen_h_tab(num_hours):\n",
+    "    # Generate .tab file for model.h\n",
+    "    f = open(\"tab/h.tab\",\"w+\")\n",
+    "    f.write(\"h\")\n",
+    "    for i in range(num_hours):\n",
+    "        f.write(\"\\n%d\" % i)\n",
+    "    f.close()\n",
     "\n",
-    "# Generate .tab file for model.dw\n",
-    "f = open(\"tab/dw.tab\",\"w+\")\n",
-    "f.write(\"dw\")\n",
-    "for i in range(num_week_days):\n",
-    "    f.write(\"\\n%d\" % (i+1))\n",
-    "f.close()\n",
+    "def gen_dw_tab(num_week_days):\n",
+    "    # Generate .tab file for model.dw\n",
+    "    f = open(\"tab/dw.tab\",\"w+\")\n",
+    "    f.write(\"dw\")\n",
+    "    for i in range(num_week_days):\n",
+    "        f.write(\"\\n%d\" % (i+1))\n",
+    "    f.close()\n",
     "\n",
     "# Generate .tab file for model.d\n",
     "f = open(\"tab/d.tab\",\"w+\")\n",
@@ -409,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +375,13 @@
     "\n",
     "# instance = model.create(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
